refactor: nettoyage intégral des code smells originels du projet